# PathTracer

./: CMakeLists.txt  README.md
includes/: camera.hpp  hit_record.hpp  material.hpp  ray.hpp  renderer.hpp  scene.hpp  shapes.hpp  utils.hpp
src/: main.cpp
